--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>com.agtinternational.iotcrawler</groupId>
   <artifactId>search-enabler</artifactId>
-  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
 
   <organization>
@@ -11,6 +11,12 @@
     <url>https://www.agtinternational.com/</url>
   </organization>
   <inceptionYear>2019</inceptionYear>
+
+<!--  <parent>-->
+<!--    <groupId>org.springframework.boot</groupId>-->
+<!--    <artifactId>spring-boot-starter-parent</artifactId>-->
+<!--    <version>2.1.6.RELEASE</version>-->
+<!--  </parent>-->
 
   <properties>
 <!--    <iotcrawler.orchestrator.version>1.0.7</iotcrawler.orchestrator.version>-->
@@ -24,6 +30,9 @@
 
     <junit.version>4.11</junit.version>
     <slf4j.version>1.7.15</slf4j.version>
+
+    <spring-version>5.1.3.RELEASE</spring-version>
+    <thymeleaf-version>3.0.11.RELEASE</thymeleaf-version>
   </properties>
 
   <dependencies>
@@ -104,12 +113,12 @@
 
 
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>junit</groupId>-->
+<!--      <artifactId>junit</artifactId>-->
+<!--      <version>3.8.1</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>com.graphql-java</groupId>
@@ -139,17 +148,17 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-<!--      <version>4.2.0.RELEASE</version>-->
       <version>5.2.1.RELEASE</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
-<!--      <version>4.2.0.RELEASE</version>-->
-      <version>5.2.1.RELEASE</version>
-    </dependency>
 
+
+<!--    <dependencies>-->
+<!--      <dependency>-->
+<!--        <groupId>org.springframework.boot</groupId>-->
+<!--        <artifactId>spring-boot-starter-web</artifactId>-->
+<!--      </dependency>-->
+<!--    </dependencies>-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -262,6 +271,25 @@
       <version>${slf4j.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf-spring5</artifactId>
+      <version>${thymeleaf-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf</artifactId>
+      <version>${thymeleaf-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.9</version>
+    </dependency>
+
+
   </dependencies>
 
 
@@ -291,16 +319,6 @@
         </executions>
       </plugin>
 
-      <plugin>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.4.6.v20170531</version>
-        <configuration>
-          <webAppConfig>
-            <allowDuplicateFragmentNames>true</allowDuplicateFragmentNames>
-          </webAppConfig>
-        </configuration>
-      </plugin>
 
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
@@ -320,12 +338,12 @@
         <artifactId>jib-maven-plugin</artifactId>
         <version>2.0.0</version>
         <configuration>
-          <from>
-            <image>java</image>
-          </from>
+<!--          <allowInsecureRegistries>true</allowInsecureRegistries>-->
+<!--          <from>-->
+<!--            <image>java</image>-->
+<!--          </from>-->
           <to>
-            <!--<image>localhost:5000/${project.name}:${project.version}</image>-->
-            <image>gitlab.iotcrawler.net:4567/${project.name}/${project.name}/${build.finalName}</image>
+            <image>gitlab.iotcrawler.net:4567/${project.name}/${project.name}/${project.build.finalName}</image>
             <!--                        <image>gitlab.iotcrawler.net:4567/${project.name}/${project.name}/master</image>-->
             <auth>
               <!--<username></username>-->
@@ -343,6 +361,9 @@
             <jvmFlags>
               <jvmFlag>-server</jvmFlag>
             </jvmFlags>
+<!--            <ports>-->
+<!--              <port>8082</port>-->
+<!--            </ports>-->
           </container>
         </configuration>
         <executions>
