--- a/chart/templates/seach-enabler-deployment.yaml
+++ b/chart/templates/seach-enabler-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   creationTimestamp: null
   labels:
     io.kompose.service: search-enabler
-  name: search-enabler
+  name: production
 spec:
   replicas: 1
   selector:
