--- a/deploy.yml
+++ b/deploy.yml
@@ -144,7 +144,7 @@ canary:
 #    - sed -i "s#<TOKEN>#${USER_TOKEN}#g" kube_config
 
     - sed -i "s#helm upgrade --install#helm upgrade --install --force#g" /usr/local/bin/auto-deploy
-
+    - cat /usr/local/bin/auto-deploy
     #- cat $KUBECONFIG
     #- export KUBECONFIG="kube_config"
     #- cat $KUBECONFIG
