--- a/deploy.yml
+++ b/deploy.yml
@@ -143,8 +143,10 @@ canary:
 #    - sed -i "s#<SERVER>#${SERVER}#g" kube_config
 #    - sed -i "s#<TOKEN>#${USER_TOKEN}#g" kube_config
 
-    - sed -i "s#helm upgrade --install#helm upgrade --install --force#g" /usr/local/bin/auto-deploy
+    #- sed -i "s#helm upgrade --install#helm upgrade --install --force#g" /usr/local/bin/auto-deploy
+    - echo "cat /usr/local/bin/auto-deploy"
     - cat /usr/local/bin/auto-deploy
+    - echo "HELM_UPGRADE_EXTRA_ARGS $HELM_UPGRADE_EXTRA_ARGS"
     #- cat $KUBECONFIG
     #- export KUBECONFIG="kube_config"
     #- cat $KUBECONFIG
