--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ variables:
   #HELM_HOST: localhost:44134
   #KUBE_NAMESPACE: orchestrator-local-production  #defined for a project in a gitblab
 
-  #HELM_UPGRADE_EXTRA_ARGS: --values chart/values.yaml
+  HELM_UPGRADE_EXTRA_ARGS: --force
 
 stages:
   - build
