--- a/deploy.yml
+++ b/deploy.yml
@@ -83,13 +83,13 @@ staging:
 
     - echo "HELM_UPGRADE_EXTRA_ARGS $HELM_UPGRADE_EXTRA_ARGS"
     #- sed -i "s#helm upgrade --install#helm upgrade --install --force#g" /usr/local/bin/auto-deploy
-    - cat /usr/local/bin/auto-deploy
+    #- cat /usr/local/bin/auto-deploy
 
     - auto-deploy check_kube_domain
     - auto-deploy download_chart
     - auto-deploy ensure_namespace
-    #- auto-deploy initialize_tiller
-    - tiller -alsologtostderr &
+    - auto-deploy initialize_tiller
+    #- tiller -alsologtostderr &
     - auto-deploy create_secret
     - auto-deploy deploy || echo "deployment should be done. Error ignored"
   environment:
