--- a/deploy.yml
+++ b/deploy.yml
@@ -72,11 +72,11 @@ staging:
   extends: .auto-deploy
   stage: staging
   script:
-    - kubectl config set-cluster k8s --server="${SERVER}"
-    - kubectl config set clusters.k8s.certificate-authority-data ${CERTIFICATE_AUTHORITY_DATA}
-    - kubectl config set-credentials gitlab --token="${USER_TOKEN}"
-    - kubectl config set-context default --cluster=k8s --user=gitlab
-    - kubectl config use-context default
+#    - kubectl config set-cluster k8s --server="${SERVER}"
+#    - kubectl config set clusters.k8s.certificate-authority-data ${CERTIFICATE_AUTHORITY_DATA}
+#    - kubectl config set-credentials gitlab --token="${USER_TOKEN}"
+#    - kubectl config set-context default --cluster=k8s --user=gitlab
+#    - kubectl config use-context default
 
 #    - echo "kubectl delete --all deployment --namespace ${KUBE_NAMESPACE}"
 #    - kubectl delete --all deployment --namespace ${KUBE_NAMESPACE} || echo ""
@@ -87,8 +87,8 @@ staging:
     - auto-deploy check_kube_domain
     - auto-deploy download_chart
     - auto-deploy ensure_namespace
-    - auto-deploy initialize_tiller
-    #- tiller -alsologtostderr &
+    #- auto-deploy initialize_tiller
+    - tiller -alsologtostderr &
     - auto-deploy delete
     - auto-deploy create_secret
     - auto-deploy deploy || echo "deployment should be done. Error ignored"
