--- a/deploy.yml
+++ b/deploy.yml
@@ -68,7 +68,7 @@
 # only manually promote to production, enable this job by setting
 # STAGING_ENABLED.
 
-staging1:
+staging:
   extends: .auto-deploy
   stage: staging
   script:
@@ -93,7 +93,7 @@ staging1:
     - auto-deploy create_secret
     - auto-deploy deploy || echo "deployment should be done. Error ignored"
   environment:
-    name: staging2
+    name: $CI_PROJECT_PATH_SLUG-staging
     url: http://$CI_PROJECT_PATH_SLUG-staging.$KUBE_INGRESS_BASE_DOMAIN
   only:
 #    refs:
