--- a/chart/templates/seach-enabler-service.yaml
+++ b/chart/templates/seach-enabler-service.yaml
@@ -6,14 +6,14 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: search-enabler
-  name: search-enabler-{{ .Values.gitlab.env }}
+    io.kompose.service: {{ .Values.gitlab.env }}
+  name: {{ .Values.gitlab.env }}
 spec:
   ports:
   - name: "80"
     port: 80
     targetPort: 8080
   selector:
-    io.kompose.service: search-enabler-{{ .Values.gitlab.env }}
+    io.kompose.service: {{ .Values.gitlab.env }}
 status:
   loadBalancer: {}
