--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,10 +19,10 @@ variables:
   IOTCRAWLER_ORCHESTRATOR_URL: http://155.54.95.248:9090/ngsi-ld/
   KUBE_NAMESPACE: search-enabler-54-{}
 
-  #  CI_DEBUG_TRACE: "true"
+  CI_DEBUG_TRACE: "true"
   CI_APPLICATION_REPOSITORY: gitlab.iotcrawler.net:4567/search-enabler/search-enabler/${CI_COMMIT_REF_NAME}
   CI_APPLICATION_TAG: ${CI_COMMIT_SHA}
-  CI_DEBUG_TRACE: true
+
 
   #HELM_HOST: localhost:44134
   #KUBE_NAMESPACE: orchestrator-local-production  #defined for a project in a gitblab
