--- a/deploy.yml
+++ b/deploy.yml
@@ -93,9 +93,9 @@ staging:
     - auto-deploy delete
     - auto-deploy create_secret
     - auto-deploy deploy
-    - echo $CI_ENVIRONMENT_URL
+    - echo ${CI_ENVIRONMENT_URL}
   environment:
-    name: $CI_ENVIRONMENT_SLUG
+    name: ${CI_PROJECT_NAME}-${CI_BUILD_STAGE}
     url: http://$CI_PROJECT_PATH_SLUG-staging.$KUBE_INGRESS_BASE_DOMAIN
   only:
 #    refs:
@@ -119,7 +119,7 @@ canary:
     - auto-deploy create_secret
     - auto-deploy deploy canary
   environment:
-    name: $CI_ENVIRONMENT_SLUG
+    name: ${CI_PROJECT_NAME}-${CI_BUILD_STAGE}
     url: http://$CI_PROJECT_PATH_SLUG.$KUBE_INGRESS_BASE_DOMAIN
   when: manual
   only:
@@ -169,7 +169,7 @@ canary:
 #  variables:
 #    CI_DEBUG_TRACE: "true"
   environment:
-    name: $CI_ENVIRONMENT_SLUG
+    name: ${CI_PROJECT_NAME}-${CI_BUILD_STAGE}
     url: http://$CI_PROJECT_PATH_SLUG.$KUBE_INGRESS_BASE_DOMAIN
   artifacts:
     paths: [environment_url.txt]
