--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ variables:
   KUBE_NAMESPACE: ${CI_PROJECT_NAME}-${CI_PROJECT_ID}-${CI_BUILD_STAGE}
 
   #CI_DEBUG_TRACE: "true"
+  CI_ENVIRONMENT_URL: ${CI_PROJECT_NAME}-${CI_PROJECT_ID}-${CI_BUILD_STAGE}.35.241.228.250.nip.io
   CI_APPLICATION_REPOSITORY: gitlab.iotcrawler.net:4567/search-enabler/search-enabler/${CI_COMMIT_REF_NAME}
   CI_APPLICATION_TAG: ${CI_COMMIT_SHA}
 
