--- a/chart/templates/seach-enabler-service.yaml
+++ b/chart/templates/seach-enabler-service.yaml
@@ -10,8 +10,7 @@ metadata:
   name: {{ .Values.gitlab.env }}
 spec:
   ports:
-  - name: "80"
-    port: 80
+  - port: 80
     targetPort: 8080
   selector:
     io.kompose.service: {{ .Values.gitlab.env }}
