--- a/chart/templates/seach-enabler-deployment.yaml
+++ b/chart/templates/seach-enabler-deployment.yaml
@@ -27,8 +27,8 @@ spec:
 {{ toYaml .Values.image.secrets | indent 10 }}
       containers:
       - name: {{ .Chart.Name }}
-        #image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        image: "{{ .Values.image.repository }}:f0b741ede3b648efd7b369df8dd4d8eaf865e3d7"
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        #image: "{{ .Values.image.repository }}:f0b741ede3b648efd7b369df8dd4d8eaf865e3d7"
         #image: "{{ .Values.image.url }}"
         imagePullPolicy: "{{ .Values.image.pullPolicy }}"
         ports:
