--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
   </organization>
   <inceptionYear>2019</inceptionYear>
 
-<!--  <parent>-->
-<!--    <groupId>org.springframework.boot</groupId>-->
-<!--    <artifactId>spring-boot-starter-parent</artifactId>-->
-<!--    <version>2.1.6.RELEASE</version>-->
-<!--  </parent>-->
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.1.6.RELEASE</version>
+  </parent>
 
   <properties>
 <!--    <iotcrawler.orchestrator.version>1.0.7</iotcrawler.orchestrator.version>-->
@@ -76,6 +76,16 @@
       <groupId>com.agtinternational.iotcrawler</groupId>
       <artifactId>fiware-clients</artifactId>
       <version>${fiware.clients.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>eu.neclab.iotplatform</groupId>
+          <artifactId>ngsi.api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!--<dependency>-->
@@ -138,31 +148,24 @@
       <version>4.0.0</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-<!--      <version>4.2.0.RELEASE</version>-->
-      <version>5.2.1.RELEASE</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.springframework</groupId>-->
+<!--      <artifactId>spring-core</artifactId>-->
+<!--&lt;!&ndash;      <version>4.2.0.RELEASE</version>&ndash;&gt;-->
+<!--&lt;!&ndash;      <version>5.2.1.RELEASE</version>&ndash;&gt;-->
+<!--    </dependency>-->
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
-      <version>5.2.1.RELEASE</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.springframework</groupId>-->
+<!--      <artifactId>spring-web</artifactId>-->
+<!--&lt;!&ndash;      <version>5.2.1.RELEASE</version>&ndash;&gt;-->
+<!--    </dependency>-->
 
-
-
-<!--    <dependencies>-->
-<!--      <dependency>-->
-<!--        <groupId>org.springframework.boot</groupId>-->
-<!--        <artifactId>spring-boot-starter-web</artifactId>-->
-<!--      </dependency>-->
-<!--    </dependencies>-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-      <version>2.2.1.RELEASE</version>
+
+<!--      <version>2.2.1.RELEASE</version>-->
 <!--      <exclusions>-->
 <!--        <exclusion>-->
 <!--          <groupId>org.springframework</groupId>-->
@@ -170,57 +173,6 @@
 <!--        </exclusion>-->
 <!--      </exclusions>-->
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>com.orange.fiware</groupId>-->
-<!--      <artifactId>ngsi-client</artifactId>-->
-<!--      <version>0.1.3</version>-->
-<!--      <scope>compile</scope>-->
-<!--    </dependency>-->
-
-<!--    <dependency>-->
-<!--      <groupId>eu.neclab.iotplatform</groupId>-->
-<!--      <artifactId>ngsi.api</artifactId>-->
-<!--      <version>7.1-SNAPSHOT</version>-->
-<!--      &lt;!&ndash;            <scope>provided</scope>&ndash;&gt;-->
-<!--      <exclusions>-->
-<!--        <exclusion>-->
-<!--          <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--          <artifactId>*</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>net.minidev</groupId>-->
-<!--          <artifactId>asm</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>*</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.ops4j.pax.logging</groupId>-->
-<!--          <artifactId>*</artifactId>-->
-<!--        </exclusion>-->
-<!--      </exclusions>-->
-<!--    </dependency>-->
-
-
-
-    <!--<dependency>-->
-      <!--<groupId>com.graphql-java</groupId>-->
-      <!--<artifactId>graphql-java-extended-scalars</artifactId>-->
-      <!--<version>1.0</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-      <!--<groupId>com.zhokhov.graphql</groupId>-->
-      <!--<artifactId>graphql-datetime-spring-boot-starter</artifactId>-->
-      <!--<version>1.5.1</version>-->
-      <!--<exclusions>-->
-        <!--<exclusion>-->
-          <!--<groupId>org.springframework.boot</groupId>-->
-          <!--<artifactId>spring-boot-starter-websocket</artifactId>-->
-        <!--</exclusion>-->
-      <!--</exclusions>-->
-    <!--</dependency>-->
 
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -228,16 +180,6 @@
       <version>3.0.1</version>
       <scope>provided</scope>
     </dependency>
-
-<!--    <dependency>-->
-<!--      <groupId>org.mongodb</groupId>-->
-<!--      <artifactId>mongodb-driver</artifactId>-->
-<!--      <version>3.4.2</version>-->
-<!--    </dependency>-->
-
-
-
-
 
     <dependency>
       <groupId>io.leangen.graphql</groupId>
@@ -271,17 +213,17 @@
       <version>${slf4j.version}</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.thymeleaf</groupId>
-      <artifactId>thymeleaf-spring5</artifactId>
-      <version>${thymeleaf-version}</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.thymeleaf</groupId>-->
+<!--      <artifactId>thymeleaf-spring5</artifactId>-->
+<!--      <version>${thymeleaf-version}</version>-->
+<!--    </dependency>-->
 
-    <dependency>
-      <groupId>org.thymeleaf</groupId>
-      <artifactId>thymeleaf</artifactId>
-      <version>${thymeleaf-version}</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.thymeleaf</groupId>-->
+<!--      <artifactId>thymeleaf</artifactId>-->
+<!--      <version>${thymeleaf-version}</version>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>org.apache.commons</groupId>
