--- a/deploy.yml
+++ b/deploy.yml
@@ -151,8 +151,8 @@ canary:
     #- cat $KUBECONFIG
     #- export KUBECONFIG="kube_config"
     #- cat $KUBECONFIG
+    - export CI_ENVIRONMENT_SLUG = ${CI_PROJECT_NAME}-${CI_BUILD_STAGE}
     - echo $CI_ENVIRONMENT_SLUG
-
     - auto-deploy check_kube_domain
     - auto-deploy download_chart
     - auto-deploy ensure_namespace
@@ -168,7 +168,6 @@ canary:
 #  variables:
 #    CI_DEBUG_TRACE: "true"
   environment:
-    slug: ${CI_PROJECT_NAME}-${CI_BUILD_STAGE}
     name: ${CI_PROJECT_NAME}-${CI_BUILD_STAGE}
     url: http://${CI_PROJECT_NAME}-${CI_BUILD_STAGE}.$KUBE_INGRESS_BASE_DOMAIN
   artifacts:
