--- a/deploy.yml
+++ b/deploy.yml
@@ -70,7 +70,7 @@
 
 staging:
   extends: .auto-deploy
-  stage: staging1
+  stage: staging
   script:
     - kubectl config set-cluster k8s --server="${SERVER}"
     - kubectl config set clusters.k8s.certificate-authority-data ${CERTIFICATE_AUTHORITY_DATA}
