--- a/deploy.yml
+++ b/deploy.yml
@@ -101,7 +101,7 @@ staging:
 #      - master
     kubernetes: active
     variables:
-      - $STAGING_ENABLED1
+      - $STAGING_ENABLED
 
 # Canaries are disabled by default, but if you want them,
 # and know what the downsides are, you can enable this by setting
@@ -140,18 +140,11 @@ canary:
    # - kubectl delete --all deployment --namespace ${KUBE_NAMESPACE} || echo ""
    # - kubectl delete --all service --namespace ${KUBE_NAMESPACE} || echo ""
     #- kubectl delete ingress orchestartor-ingress --namespace ${KUBE_NAMESPACE} || echo ""
-#
-#    - sed -i "s#<CERTIFICATE_AUTHORITY_DATA>#${CERTIFICATE_AUTHORITY_DATA}#g" kube_config
-#    - sed -i "s#<SERVER>#${SERVER}#g" kube_config
-#    - sed -i "s#<TOKEN>#${USER_TOKEN}#g" kube_config
 
     - sed -i "s#helm upgrade --install#helm upgrade --install --force#g" /usr/local/bin/auto-deploy
-
-    #- cat $KUBECONFIG
-    #- export KUBECONFIG="kube_config"
-    #- cat $KUBECONFIG
     - export CI_ENVIRONMENT_SLUG="${CI_PROJECT_NAME}-${CI_BUILD_STAGE}"
     - echo $CI_ENVIRONMENT_SLUG
+    -
     - auto-deploy check_kube_domain
     - auto-deploy download_chart
     - auto-deploy ensure_namespace
