--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
     <thymeleaf-version>3.0.11.RELEASE</thymeleaf-version>
   </properties>
 
+    <repositories>
+        <repository>
+            <id>atlassian</id>
+            <name>atlassian</name>
+            <url>https://packages.atlassian.com/maven-public/</url>
+        </repository>
+    </repositories>
+
   <dependencies>
 
 <!--    <dependency>-->
@@ -43,8 +51,22 @@
 <!--      <version>${fiware.models.version}</version>-->
 <!--    </dependency>-->
 
+      <dependency>
+          <groupId>com.atlassian.braid</groupId>
+          <artifactId>graphql-braid</artifactId>
+          <version>0.23.3</version>
+      </dependency>
 
-    <dependency>
+
+      <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+      <dependency>
+          <groupId>javax.annotation</groupId>
+          <artifactId>javax.annotation-api</artifactId>
+          <version>1.3.2</version>
+      </dependency>
+
+
+      <dependency>
       <groupId>com.agtinternational.iotcrawler</groupId>
       <artifactId>core</artifactId>
       <version>${iotcrawler.core.version}</version>
@@ -236,6 +258,11 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.9</version>
     </dependency>
+      <dependency>
+          <groupId>com.atlassian.braid</groupId>
+          <artifactId>graphql-braid</artifactId>
+          <version>0.23.3</version>
+      </dependency>
 
 
   </dependencies>
