--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
 <!--    </dependency>-->
 
     <dependency>
+      <groupId>com.agtinternational.iotcrawler</groupId>
+      <artifactId>smartHomeApp</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-graphql-java</artifactId>
       <version>1.0.0-M03</version>
